imported patch timeWindows2